# data-sink

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  openAPI.json  packageinfo.py  requirements.txt  setup.cfg  setup.py
app/: crud.py  cuds_dataset.py  database.py  main.py  models.py  schemas.py
app/routers/: datasink.py
ontologies/: dcat3.yml  marketplace.ttl  marketplace.yml  streamonto.yml  uc3ttlv2.ttl  uc3ttlv2.yml
