[metadata]
name = datasink_app
version = 0.1.0
description = Data storage application to store dataset objects and containers.
long_description = file: README.md
long_description_content_type = text/markdown
author = Kiran Kumaraswamy
author_email = kiran.kumaraswamy@iwm.fraunhofer.de
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    python_dateutil == 2.6.0
    setuptools >= 21.0.0
    flask-sqlalchemy >= 2.5.0
    rdflib == 6.3.2
    pycurl == 7.45.2
    requests_oauthlib == 1.3.0
    psycopg2 >= 2.9.0
    python-dotenv
    openapi-spec-validator==0.4.0
    hypercorn==0.14.3
    fastapi[all]==0.95.1
    python-multipart==0.0.6
    shieldapi==1.1.1
python_requires = >=3.7

[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
    flake8==6.0.0
pre_commit =
    pre-commit==2.15.0
tests =
    pytest==6.2.5

[bumpver]
current_version = "v0.0.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = False

[bumpver:file_patterns]
setup.cfg =
    version = {version}
